--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,60 @@
 {
-  "extends": "next/core-web-vitals"
+	"root": true,
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true
+	},
+	"settings": {
+		// to support @/ path
+		"import/resolver": {
+			"typescript": {} // this loads <rootdir>/tsconfig.json to eslint
+		},
+		"react": {
+			"version": "detect"
+		}
+	},
+
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:@typescript-eslint/recommended-requiring-type-checking", // contains rules that specifically require type information
+		"plugin:@next/next/recommended",
+		"next", // https://github.com/vercel/next.js/blob/canary/packages/eslint-config-next/package.json
+		"next/core-web-vitals"
+	],
+
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"project": "./tsconfig.json", // tells parser relative path of tsconfig.json
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": [
+		"@typescript-eslint",
+		"@next/eslint-plugin-next", // https://github.com/vercel/next.js/blob/canary/packages/eslint-plugin-next/lib/index.js
+		"testing-library"
+	],
+
+	"rules": {
+		"@typescript-eslint/strict-boolean-expressions": [
+			2,
+			{
+				"allowString": false,
+				"allowNumber": false
+			}
+		]
+	},
+	"overrides": [
+		// Only uses Testing Library lint rules in test files
+		{
+			"files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+			"extends": ["plugin:testing-library/react"]
+		}
+	],
+	"ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
 }
