--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "custom-next-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2"
-  }
+	"name": "custom-next-starter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest --watch",
+		"test:ci": "jest --ci"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.3.6",
+		"framer-motion": "latest",
+		"next": "13.0.2",
+		"next-pwa": "^5.6.0",
+		"next-seo": "latest",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^7.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "5.16.4",
+		"@testing-library/react": "13.2.0",
+		"@testing-library/user-event": "14.2.0",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^12.12.21",
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.1",
+		"@types/react-redux": "^7.1.18",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"autoprefixer": "^10.4.12",
+		"eslint": "8.27.0",
+		"eslint-config-next": "13.0.2",
+		"eslint-plugin-testing-library": "^5.9.1",
+		"jest": "latest",
+		"jest-css-modules-transform": "^4.2.0",
+		"jest-environment-jsdom": "28.1.0",
+		"next-sitemap": "3.1.22",
+		"postcss": "^8.4.18",
+		"tailwindcss": "^3.2.1",
+		"ts-jest": "latest",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.8.3"
+	}
 }
