--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.3.6",
-		"framer-motion": "latest",
-		"next": "13.0.2",
+		"framer-motion": "^10.16.2",
+		"next": "latest",
 		"next-pwa": "^5.6.0",
-		"next-seo": "latest",
+		"next-seo": "^6.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-redux": "^7.2.0"
@@ -34,13 +34,13 @@
 		"eslint": "8.27.0",
 		"eslint-config-next": "13.0.2",
 		"eslint-plugin-testing-library": "^5.9.1",
-		"jest": "latest",
+		"jest": "^29.6.4",
 		"jest-css-modules-transform": "^4.2.0",
 		"jest-environment-jsdom": "28.1.0",
 		"next-sitemap": "3.1.22",
 		"postcss": "^8.4.18",
 		"tailwindcss": "^3.2.1",
-		"ts-jest": "latest",
+		"ts-jest": "^29.1.1",
 		"ts-node": "^10.2.1",
 		"typescript": "^4.8.3"
 	}
